Fix z-index for scroll to top link

--- a/_sass/_base-elements.sass
+++ b/_sass/_base-elements.sass
@@ -353,6 +353,7 @@ input:checked + .slider::before
   pointer-events: none
   transform: translateY(2em)
   +transition-ease
+  z-index: 1
 
   a
     display: flex
